--- a/css/add.css
+++ b/css/add.css
@@ -9,6 +9,7 @@
     #body_plugin_gallery textarea {
         display: inline-block;
         width: 500px !important;
+        height: 3.2em;
     }
     #body_plugin_gallery .form_line {
         margin-bottom: 5px;
