--- a/css/add.css
+++ b/css/add.css
@@ -1,92 +1,123 @@
-    #body_plugin_gallery input[type='text'] {
-        width: 220px;
-    }
-    #body_plugin_gallery label {
-        display: inline-block;
-        width: 160px;
+#body_plugin_gallery input[type='text'] {
+    width: 220px;
+}
+#body_plugin_gallery label {
+    display: inline-block;
+    width: 160px;
 
-        vertical-align: top;
-    }
-    #body_plugin_gallery textarea {
-        display: inline-block;
-        width: 500px !important;
-        height: 4.2em;
-    }
-    #body_plugin_gallery .form_line {
-        margin-bottom: 5px;
-    }
-    #body_plugin_gallery .form_controls {
-        margin-top: 1.5em;
-        padding: 1em 1em;
-        background-color: #EBEBEB;
+    vertical-align: top;
+}
+#body_plugin_gallery textarea {
+    display: inline-block;
+    width: 500px !important;
+    height: 4.2em;
+}
+#body_plugin_gallery .form_line {
+    margin-bottom: 5px;
+}
+#body_plugin_gallery .form_controls {
+    margin-top: 1.5em;
+    padding: 1em 1em;
+    background-color: #EBEBEB;
 
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-    }
-    #body_plugin_gallery .form_content {
-        display: inline-block;
-        width: 400px;
-    }
-    .datalist {
-        display: inline-block;
-        clear: none;
-        min-width: 265px;
-    }
-    .datalist_add {
-        float: right;
-    }
-    .datalist_item {
-        margin-bottom: 3px;
-    }
-    .datalist_line {
-        display: block;
-        clear: both;
-    }
-    .datalist_line .ui-helper-hidden-accessible {
-        display: none;
-    }
-    /* Autocomplete */
-    .ui-autocomplete { position: absolute; cursor: default; }   
-    * html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
-    .ui-menu {
-        list-style:none;
-        margin: 0;
-        display:block;
-        float: left;
-        background-color: #fff;
-        border-left: 1px solid #7F9DB9;
-        border-bottom: 1px solid #7F9DB9;
-        border-right: 1px solid #7F9DB9;
-    }
-    .ui-menu .ui-menu {
-        margin-top: -3px;
-    }
-    .ui-menu .ui-menu-item {
-        margin:0;
-        padding: 0;
-        zoom: 1;
-        float: left;
-        clear: left;
-        width: 100%;
-    }
-    .ui-menu .ui-menu-item a {
-        text-decoration:none;
-        display:block;
-        padding:.2em .2em;
-        line-height: 1.2;
-        zoom:1;
-    }
-    .ui-menu .ui-menu-item a.ui-state-hover,
-    .ui-menu .ui-menu-item a.ui-state-active {
-        font-weight: normal;
-    }
-    .ui-menu a {
-        padding: 2px;
-        color: #000;
-        font-size: .9em;
-    }
-    .ui-menu a:hover {
-        color: #fff;
-        background-color: #4079FF;
-    }
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+#body_plugin_gallery .form_content {
+    display: inline-block;
+    width: 400px;
+}
+.datalist {
+    display: inline-block;
+    clear: none;
+    min-width: 265px;
+}
+.datalist_add {
+    float: right;
+}
+.datalist_item {
+    margin-bottom: 3px;
+}
+.datalist_line {
+    display: block;
+    clear: both;
+}
+.datalist_line .ui-helper-hidden-accessible {
+    display: none;
+}
+/* Autocomplete */
+.ui-autocomplete { position: absolute; cursor: default; }   
+* html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
+.ui-menu {
+    list-style:none;
+    margin: 0;
+    display:block;
+    float: left;
+    background-color: #fff;
+    border-left: 1px solid #7F9DB9;
+    border-bottom: 1px solid #7F9DB9;
+    border-right: 1px solid #7F9DB9;
+}
+.ui-menu .ui-menu {
+    margin-top: -3px;
+}
+.ui-menu .ui-menu-item {
+    margin:0;
+    padding: 0;
+    zoom: 1;
+    float: left;
+    clear: left;
+    width: 100%;
+}
+.ui-menu .ui-menu-item a {
+    text-decoration:none;
+    display:block;
+    padding:.2em .2em;
+    line-height: 1.2;
+    zoom:1;
+}
+.ui-menu .ui-menu-item a.ui-state-hover,
+.ui-menu .ui-menu-item a.ui-state-active {
+    font-weight: normal;
+}
+.ui-menu a {
+    padding: 2px;
+    color: #000;
+    font-size: .9em;
+}
+.ui-menu a:hover {
+    color: #fff;
+    background-color: #4079FF;
+}
+
+.filelist_item {
+    display: inline-block;
+    width: 160px;
+    position: relative;
+    background-color: #d4d4d4;
+    border: 4px solid #d4d4d4;
+}
+.filelist_item:hover input[type=button] {
+    visibility: visible;
+}
+.filelist_item img {
+    max-width: 100%;
+}
+.filelist_item input[type=button] {
+    visibility: hidden;
+    position: absolute;
+    top: 10px;
+    z-index: 9001;
+    right: 10px;
+    cursor: pointer;
+    padding: .2em .5em;
+}
+.preview span {
+    display: inline-block;
+    width: 160px;
+    border: 4px solid #3BBAFF;
+}
+.preview img {
+    max-width: 100%;
+}
